# Wildfire-simulation---POS

./: Bunka.cpp  Bunka.h  CMakeLists.txt  Client.h  Generator.cpp  Generator.h  Makefile  PoziarnyBiotop.h  Server.h  ServerMain.cpp  Svet.cpp  Svet.h  Vietor.h  main.cpp
